--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,1 +1,14 @@
 // Override template styles or write your custom styles
+
+.v-btn {
+  text-transform: none !important;
+  font-weight: 600 !important;
+}
+
+.w-100 {
+  width: 100% !important;
+}
+
+.h-100 {
+  height: 100% !important;
+}
